SAP Commerce DB Sync v1.1 Enhancements
- Filtering of tables using views​
- Transform specific columns using views and sample library of masking functions​
- Drop & recreate indexes at the target to improve replication speed​
- Truncate not replicated tables at the target if required

--- a/commercedbsync/resources/localization/commercedbsync-locales_en.properties
+++ b/commercedbsync/resources/localization/commercedbsync-locales_en.properties
@@ -16,3 +16,5 @@ type.MigrationCronJob.lastStartTime.description=
 type.MigrationCronJob.migrationItems.name=Migration Tables
 type.MigrationCronJob.migrationItems.description=
 
+type.FullMigrationCronJob.fullDatabaseMigration.name=Full Database Migration
+type.FullMigrationCronJob.fullDatabaseMigration.description=
