--- a/commercedbsync/resources/localization/commercedbsync-locales_en.properties
+++ b/commercedbsync/resources/localization/commercedbsync-locales_en.properties
@@ -30,3 +30,9 @@ type.MigrationCronJob.maxWriterWorkers.description=Number of writer workers to b
 
 type.MigrationCronJob.batchSize.name=Batch Size
 type.MigrationCronJob.batchSize.description=Batch size used to query data
+
+type.FullMigrationCronJob.resumeMigration.name=Resume Migration
+type.FullMigrationCronJob.resumeMigration.description=
+
+type.FullMigrationCronJob.migrationId.name=Migration ID
+type.FullMigrationCronJob.migrationId.description=
